# darkspeak

./: .gitignore  .gitmodules  CMakeLists.txt  Doxygen  README.md  config.h.template  darkspeak.pro  testing.conf.template  todo.txt
database/: master.db
doc/: TC_Protocol.md  darkspeak-kubuntu.md  darkspeak-windows.md  incoming_workflow.dia  protocol.md  requirements.md  torconfig.md
include/darkspeak/: Api.h  BuddyEventsMonitor.h  BuddyImpl.h  Config.h  Connection.h  EventMonitor.h  FileInfo.h  ImManager.h  ImProtocol.h  IoTimer.h  SocketImpl.h  TorChatConnection.h  TorChatEngine.h  TorChatPeer.h  darkspeak.h  darkspeak_impl.h  md5.h  weak_container.h
qt_quick_app/: Page1Form.ui.qml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Contacts.qml  Conversations.qml  EditContactDialog.qml  EditIdentityDialog.qml  GeneralSettings.qml  Header.qml  HomeForm.ui.qml  Identities.qml  MainToolBar.qml  MessageComponent.qml  PathsSettings.qml  main.cpp  qtquickcontrols2.conf
src/corelib/: CMakeLists.txt  corelib.pro
src/corelib/include/ds/: bytes.h  contact.h  contactmanager.h  conversation.h  conversationmanager.h  database.h  dsengine.h  errors.h  file.h  filemanager.h  hashtask.h  identity.h  identitymanager.h  logutil.h  lru_cache.h  message.h  messagemanager.h  peerconnection.h  protocolmanager.h  registry.h  task.h  transporthandle.h  update_helper.h  userinfo.h
src/corelib/src/: contact.cpp  contactmanager.cpp  conversation.cpp  conversationmanager.cpp  database.cpp  dsengine.cpp  file.cpp  filemanager.cpp  hashtask.cpp  identity.cpp  identitymanager.cpp  identy.cpp  logutil.cpp  message.cpp  messagemanager.cpp  protocolmanager.cpp
src/cryptolib/: CMakeLists.txt  cryptolib.pro
src/cryptolib/include/ds/: base32.h  base58.h  certimpl.h  crypto.h  cvar.h  dscert.h  memoryview.h  rsacertimpl.h  safememory.h
src/cryptolib/src/: base32.cpp  base58.cpp  certimpl.cpp  crypto.cpp  rsacertimpl.cpp
src/dscorelib/: dscorelib.pro
src/dscorelib/include/ds/: contact.h  database.h  dsengine.h  errors.h  identity.h  logging.h  protocolmanager.h  task.h  transporthandle.h
src/dscorelib/src/: database.cpp  dsengine.cpp  logging.cpp  protocolmanager.cpp
src/dsprotlib/: dsprotlib.pro
src/dsprotlib/include/ds/: protmanager.h  torprotocolmanager.h
src/dsprotlib/src/: protmanager.cpp  torprotocolmanager.cpp
src/lib/: BuddyImpl.cpp  CMakeLists.txt  Config.cpp  Connection.cpp  ImManager.cpp  TorChatConnection.cpp  TorChatEngine.cpp  TorChatPeer.cpp
src/md5-cc/: CMakeLists.txt  md5.cc  md5.cpp
src/modelslib/: CMakeLists.txt  modelslib.pro
src/modelslib/include/ds/: contactsmodel.h  conversationsmodel.h  filesmodel.h  identitiesmodel.h  identitynamevalidator.h  imageprovider.h  logmodel.h  manager.h  messagemodel.h  messagesmodel.h  model_util.h  notificationsmodel.h  strategy.h
src/modelslib/src/: contactsmodel.cpp  conversationsmodel.cpp  filesmodel.cpp  identitiesmodel.cpp  identitynamevalidator.cpp  imageprovider.cpp  logmodel.cpp  manager.cpp  messagemodel.cpp  messagesmodel.cpp  notificationsmodel.cpp
src/protlib/: CMakeLists.txt  protlib.pro
src/protlib/include/ds/: connectionsocket.h  dsclient.h  dsserver.h  imageutil.h  peer.h  protmanager.h  torprotocolmanager.h  torserviceinterface.h  torsocketlistener.h
src/protlib/src/: connectionsocket.cpp  dsclient.cpp  dsserver.cpp  imageutil.cpp  peer.cpp  torprotocolmanager.cpp  torserviceinterface.cpp  torsocketlistener.cpp
src/qt-quick-gui/: CMakeLists.txt  ChatMessagesModel.cpp  ChatMessagesModel.h  ContactData.cpp  ContactData.h  ContactsModel.cpp  ContactsModel.h  Credits.md  DarkRoot.cpp  DarkRoot.h  FileTransferModel.cpp  FileTransferModel.h  ImageProvider.cpp  ImageProvider.h  SettingsData.cpp  SettingsData.h  darkspeak-gui.h  main.cpp  resources.qrc
src/qt-quick-gui/qml/: AddContactDlg.qml  ChatView.qml  ContactDelegate.qml  ContactsListView.qml  DataText.qml  DataTextRo.qml  EditBuddy.qml  FileTransfersView.qml  IncomingFileRequest.qml  MainToolBar.qml  OwnInfoTab.qml  SelectAvatar.qml  SendFileDialog.qml  SettingsDlg.qml  TorSettingsTab.qml  main.qml
src/qt_quick_app/: AcceptContactDialog.qml  Chat.qml  ChatForm.ui.qml  Contacts.qml  ContactsForm.ui.qml  Conversations.qml  ConversationsForm.ui.qml  CreateIdentityDialog.qml  EditContactDialog.qml  EditIdentityDialog.qml  EditUploadFileDialog.qml  FileComponent.qml  FileSelecter.qml  FormattedTime.qml  Header.qml  Home.qml  Identities.qml  IdentitiesForm.qml  IdentitiesForm.ui.qml  ImportTorServiceDialog.qml  Log.qml  LogForm.ui.qml  LogSettings.qml  MainToolBar.qml  MessageComponent.qml  NewContactDialog.qml  Page2Form.ui.qml  RoundedImage.qml  SettingsDialog.qml  TorSettings.qml  main.cpp  main.qml  qml.qrc  qt_quick_app.pro
src/torlib/: CMakeLists.txt  torlib.pro
src/torlib/include/ds/: serviceproperties.h  torconfig.h  torcontroller.h  torctlsocket.h  tormgr.h
src/torlib/src/: torcontroller.cpp  torctlsocket.cpp  torctlsocket.h  tormgr.cpp
tests/: CMakeLists.txt  devel_tests.cpp
tests/crypto_tests/: crypto_tests.pro  main.cpp  tst_certs.cpp  tst_certs.h
tests/tests_core/: main.cpp  tests_core.pro  tst_dsengine.cpp  tst_dsengine.h
tests/tests_crypto/: main.cpp  tests_crypto.pro  tst_certs.cpp  tst_certs.h
tests/tests_models/: main.cpp  tests_models.pro  tst_contactsmodel.cpp  tst_contactsmodel.h  tst_identities.cpp  tst_identities.h  tst_messages.cpp  tst_messages.h
tests/tests_tor/: main.cpp  tests_tor.pro  tst_torcontroller.cpp  tst_torctlsocket.h  tst_tormanager.cpp  tst_tormanager.h
tests/tor_tests/: main.cpp  tor_tests.pro  tst_torcontroller.cpp  tst_torcontroller.h  tst_torctlsocket.cpp  tst_tormanager.cpp
